# Spin-Pulse

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  junit.xml  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  push-update.yml  test.yml
docs/source/: conf.py  index.md
docs/source/_static/: custom.css
docs/source/_templates/autoapi/python/: module.rst
docs/source/api/examples/: BasicUsage.ipynb  NoisyGates.ipynb  ParametrizingfromQPUSpecs.ipynb  RamseySpinEcho.ipynb  TimeTracesExamples.ipynb  index.md  noisy_BV_algo.ipynb
docs/source/api/installation/: index.md
docs/source/api/spin_pulse/: index.md
docs/source/api/spin_pulse/experimental_environment/: index.rst
docs/source/api/spin_pulse/hardware_specs/: index.rst
docs/source/api/spin_pulse/instructions/: index.rst
docs/source/api/spin_pulse/instructions/idle/: index.rst
docs/source/api/spin_pulse/instructions/pulse_instruction/: index.rst
docs/source/api/spin_pulse/instructions/rotations/: index.rst
docs/source/api/spin_pulse/passes/: index.rst
docs/source/api/spin_pulse/propagate/: index.rst
docs/source/api/spin_pulse/pulse_circuit/: index.rst
docs/source/api/spin_pulse/pulse_layer/: index.rst
docs/source/api/spin_pulse/pulse_sequence/: index.rst
docs/source/api/spin_pulse/ramsey/: index.rst
docs/source/api/spin_pulse/utils/: index.rst
docs/source/autoapi/spin_pulse/: index.rst
docs/source/autoapi/spin_pulse/characterization/average_superop/: index.rst
docs/source/autoapi/spin_pulse/characterization/ramsey/: index.rst
docs/source/autoapi/spin_pulse/environment/: index.rst
docs/source/autoapi/spin_pulse/environment/experimental_environment/: index.rst
docs/source/autoapi/spin_pulse/environment/noise/: index.rst
docs/source/autoapi/spin_pulse/transpilation/: index.rst
docs/source/autoapi/spin_pulse/transpilation/hardware_specs/: index.rst
docs/source/autoapi/spin_pulse/transpilation/instructions/: index.rst
docs/source/customapi/installation/: index.md
docs/source/customapi/tutorials/: AverageSuperoperatorsNoisyGates.ipynb  BasicUsage.ipynb  BernsteinVazirani.ipynb  ParametrizingfromQPUSpecs.ipynb  QuimbSimulation.ipynb  RamseySpinEcho.ipynb  TimeTracesExamples.ipynb  index_simple.md
examples/: AverageSuperoperatorsNoisyGates.py  BasicUsage.ipynb  BasicUsage.py  BernsteinVazirani.ipynb  BernsteinVazirani.py  NoisyGates.ipynb  ParametrizingfromQPUSpecs.ipynb  ParametrizingfromQPUSpecs.py  QuimbSimulation.ipynb  QuimbSimulation.py  RamseySpinEcho.ipynb  RamseySpinEcho.py  TimeTracesExamples.ipynb  TimeTracesExamples.py  custom.css
quoblygatemodel-main/: .gitignore  README.md  junit.xml  pyproject.toml
quoblygatemodel-main/.gitlab/: cmd_jupyter  docs-ci.yml  docs-pages.yml  jupyter-test-ci.yml  lint-ci.yml  release-ci.yml  tests-ci.yml
quoblygatemodel-main/docs/source/: conf.py  index.md
quoblygatemodel-main/docs/source/autoapi/spin_pulse/: index.rst
quoblygatemodel-main/docs/source/customapi/installation/: index.md
quoblygatemodel-main/docs/source/customapi/tutorials/: AverageSuperoperatorsNoisyGates.ipynb  BasicUsage.ipynb  BernsteinVazirani.ipynb  ParametrizingfromQPUSpecs.ipynb  QuimbSimulation.ipynb  RamseySpinEcho.ipynb  TimeTracesExamples.ipynb  index_simple.md
quoblygatemodel-main/examples/: AverageSuperoperatorsNoisyGates.py  BasicUsage.py  BernsteinVazirani.py  ParametrizingfromQPUSpecs.py  QuimbSimulation.py  RamseySpinEcho.py  TimeTracesExamples.py
quoblygatemodel-main/src/spin_pulse/: __init__.py
quoblygatemodel-main/src/spin_pulse/characterization/: __init__.py  average_superop.py  ramsey.py
quoblygatemodel-main/src/spin_pulse/environment/: __init__.py  experimental_environment.py
quoblygatemodel-main/src/spin_pulse/environment/noise/: __init__.py  noise_time_trace.py  pink.py  quasistatic.py  white.py
quoblygatemodel-main/src/spin_pulse/transpilation/: __init__.py  dynamical_decoupling.py  hardware_specs.py  pulse_circuit.py  pulse_layer.py  pulse_sequence.py  utils.py
quoblygatemodel-main/src/spin_pulse/transpilation/instructions/: __init__.py  idle.py  pulse_instruction.py  rotations.py
quoblygatemodel-main/src/spin_pulse/transpilation/passes/: __init__.py  rzz_echo.py
quoblygatemodel-main/tests/: test_average_channel.py  test_experimental_environement.py  test_hardware_specs.py  test_idle_instruction.py  test_noise_time_trace.py  test_pink_noise.py  test_pulse_circuit.py  test_pulse_layer.py  test_pulse_sequence.py  test_ramsey.py  test_rotation_instructions.py  test_seeded_circuit.py  test_utils.py
src/spin_pulse/: __init__.py  average_channel.py  experimental_environment.py  hardware_specs.py  propagate.py  pulse_circuit.py  pulse_layer.py  pulse_sequence.py  ramsey.py  utils.py
src/spin_pulse/characterization/: average_superop.py  ramsey.py
src/spin_pulse/environment/: experimental_environment.py
src/spin_pulse/environment/noise/: noise_time_trace.py  pink.py  quasistatic.py  white.py
src/spin_pulse/instructions/: idle.py  pulse_instruction.py  rotations.py
src/spin_pulse/noise/: __init__.py  coherent.py  noise_time_trace.py  pink.py  white.py
src/spin_pulse/passes/: __init__.py  rzz_echo.py
src/spin_pulse/transpilation/: hardware_specs.py  pulse_circuit.py  pulse_layer.py  pulse_sequence.py  utils.py
src/spin_pulse/transpilation/instructions/: idle.py  pulse_instruction.py  rotations.py
src/spin_pulse/transpilation/passes/: rzz_echo.py
tests/: __init__.py  conftest.py  test_average_channel.py  test_coherent_noise.py  test_experimental_environement.py  test_hardware_specs.py  test_idle_instruction.py  test_noise_time_trace.py  test_pink_noise.py  test_propagate.py  test_pulse_circuit.py  test_pulse_layer.py  test_pulse_sequence.py  test_ramsey.py  test_rotation_instructions.py  test_seeded_circuit.py  test_utils.py  test_white_noise.py
tests/complex/: test_numerical_integration.py  test_transpilation.py
tests/fixtures/: dummy_objects.py  pulse_circuit_fixtures.py  utils_fixtures.py
(+34 files in other folders)
