# --------------------------------------------------------------------------------------
# This code is part of SpinPulse.
#
# (C) Copyright Quobly 2025.
#
# This code is licensed under the Apache License, Version 2.0. You may
# obtain a copy of this license in the LICENSE.txt file in the root directory
# of this source tree or at http://www.apache.org/licenses/LICENSE-2.0.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals.
# --------------------------------------------------------------------------------------

[project]
  name = "spin_pulse"
  description = "Quobly noise accurate simulation toolbox."
  readme = "README.md"
  requires-python = ">=3.11"
  authors = [
    { name = "Benoit Vermersch", email = "benoit.vermersch@quobly.io" },
    { name = "Oscar Gravier", email = "oscar.gravier@gmail.com" },
    { name = "Matthieu C. Dartiailh", email = "matthieu.dartiailh@quobly.io" },
    { name = "Julia Guignon", email = "julia.guignon@quobly.io" },
    { name = "Nathan Miscopein", email = 'nathan.miscopein@quobly.io'},
    { name = "Carlos Ramos Marimon", email = 'carlos.marimon@quobly.io'},
    { name = "Jonathan Durandau", email = 'jonathan.durandau@quobly.io'},
    { name = "Tristan Meunier", email = 'tristan.meunier@quobly.io'},
    { name = "Valentin Savin", email = 'valentin.savin@quobly.io'},

  ]
  classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
  ]
  dynamic = ["version"]
  dependencies = [
    "numpy>=2.1",
    "scipy",
    "matplotlib",
    "qiskit>=2",
    "pylatexenc",
    "importlib_metadata>=8.7",
    "tqdm",
    "packaging",
    "setuptools_scm",
    "qiskit-aer",
    "networkx>=3.0",
    "llvmlite>=0.46",
    "numba>=0.63",
    "quimb>=1.10",
  ]

  [project.urls]
    homepage   = "https://github.com/quobly-sw/SpinPulse"
    repository = "https://github.com/quobly-sw/SpinPulse"

[dependency-groups]
  examples = [
    "jupyterlab",
    "qiskit_aer",
    "qiskit_experiments",
  ]
  test = [
    "pytest>=8",
    "pytest-cov>=6",
  ]
  docs = [
    "pydata-sphinx-theme>=0.16",
    'furo>=2024.6.29',
    "sphinx-autoapi>=3.6",
    "sphinx>=8",
    "myst-nb",
    "sphinx-design",
    "sphinx-copybutton",
    "jupytext",
    "nbconvert",
  ]
  lint = [
    "ruff",
    "mypy",
    "types-tqdm",
    "scipy-stubs",
    "nbqa",
    "qiskit_aer",
  ]
  dev = [
    { include-group = "docs" },
    { include-group = "examples" },
    { include-group = "lint" },
    { include-group = "test" },
  ]

[build-system]
  requires      = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
  build-backend = "setuptools.build_meta"

[tool]

  [tool.setuptools]
    include-package-data = true

  [tool.setuptools_scm]
    write_to = "src/spin_pulse/version.py"
    write_to_template = """
# --------------------------------------------------------------------------------------
# This code is part of SpinPulse.
#
# (C) Copyright Quobly 2025.
#
# This code is licensed under the Apache License, Version 2.0. You may
# obtain a copy of this license in the LICENSE.txt file in the root directory
# of this source tree or at http://www.apache.org/licenses/LICENSE-2.0.
#
# Any modifications or derivative works of this code must retain this
# copyright notice, and modified files need to carry a notice indicating
# that they have been altered from the originals.
# --------------------------------------------------------------------------------------
# This file is auto-generated by setuptools-scm do NOT edit it.

from importlib_metadata import distributions
from packaging.version import parse

# We need to iterate because editable installs shows up as 2 distinct installs
# and only one carries the editable install information.
for d in (d for d in distributions() if d.name == "spin_pulse"):
    if (
        getattr(d, "origin", None)
        and getattr(d.origin, "dir_info", None)
        and getattr(d.origin.dir_info, "editable", False)
    ):
        from pathlib import Path

        from setuptools_scm import get_version

        version = parse(get_version(root=Path(__file__).resolve().parent.parent.parent))
        break
else:
    version = parse("{version}")

__version__ = str(version)

del version
"""

  [tool.ruff]
    line-length = 88
    exclude = ["examples", ]
    [tool.ruff.lint]
      select        = ["C", "C90", "D209", "D403", "D405", "D413", "E", "F", "I", "RUF", "W"]
      extend-ignore = ["E501", "RUF012"]

      [tool.ruff.lint.isort]
        combine-as-imports = true

      [tool.ruff.lint.mccabe]
        max-complexity = 20

  [tool.ruff-format]
    exclude = ["examples", ]

  [tool.mypy]
    follow_imports  = "normal"
    strict_optional = true

    [[tool.mypy.overrides]]
      module = [
        "qiskit.*",
        "qiskit_aer",
        "setuptools_scm.*",
        "quimb",
        "quimb.*",
      ]
      ignore_missing_imports = true

  [tool.coverage]
    [tool.coverage.run]
      branch = true
      source = ["src/spin_pulse"]

    [tool.coverage.report]
      # Regexes for lines to exclude from consideration
      exclude_lines = [
        # Have to re-enable the standard pragma
        "pragma: no cover",
        # Don't complain if tests don't hit defensive assertion code:
        "raise NotImplementedError",
        "pass",
        # Don't complain about abstract methods, they aren't run:
        "@(abc\\.)?abstractmethod",
        # Don't complain about type checking
        "if TYPE_CHECKING:",
        # Don't complain about ellipsis in overload
        "\\.\\.\\.",      ]


[tool.pytest.ini_options]
addopts = "-v --color=yes -W error"
testpaths = ["tests"]
filterwarnings = [
    "error::UserWarning",
    "ignore::DeprecationWarning"
]
